--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,12 +8,10 @@
 
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700,400italic,700italic,300italic,300|Source+Sans+Pro:200,300,300italic,400,400italic,600,600italic,900|Roboto+Condensed" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i" rel="stylesheet">
 
   <script src="{{site.baseurl}}/javascripts/jquery-2.1.4.min.js"></script>
   <script src="{{site.baseurl}}/javascripts/application.js"></script>
-  <script src="{{site.baseurl}}/javascripts/tablesaw.stackonly.js"></script>
-  <script src="{{site.baseurl}}/javascripts/tablesaw-init.js"></script>
 
   <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/stylesheets/reset.css">
   <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/stylesheets/screen.css">
